--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -11,7 +11,7 @@ jobs:
         run: |
           curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
       - name: Login to Postman CLI
-        run: postman login --with-api-key $POSTMAN_API_KEY
+        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
       - name: Run API tests
         run: |
-          postman collection run "13935209-374987e8-5ad5-4983-889b-daa9e65f65d2"
+          postman collection run "13935209-374987e8-5ad5-4983-889b-daa9e65f65d2" -e "13935209-2fc64931-07b8-40d2-a9d1-3f2483c49193"
